SBT version 1.9.8